--- a/index.html
+++ b/index.html
@@ -1,53 +1,54 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mark Watney</title>
+    <title>Oh Baby Baby</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
   <body>
     <div class="header">
-      <img src="photo.png">
-      <h1>Mark Watney</h1>
-      <h2>Botanist and Mechanical Engineer</h2>
-      <p>Contact Me:</p>
+      <img src="Baby on sofa.jpg">
+      <h1>Baby</h1>
+      <h2>a/k/a Buddy, Lil Dude, Bubbsie</h2>
+      <p>Contact My Frandz:</p>
       <ul>
-        <li><a href="http://twitter.com/MarkWatneyAres3">Twitter</a></li>
-        <li><a href="http://facebook.com/MarkWatneyAres3">Facebook</a></li>
+        <li><a href="https://twitter.com/marniethedog">Marnie aka Marn-Marn</a></li>
+        <li><a href="https://twitter.com/itsdougthepug">Doug Da Pug</a></li>
       </ul>
     </div>
 
     <h3>Summary</h3>
     <p>
-      Mark is a specialist for NASA and currently assigned to the Ares 3 mission to Mars.
-      He has a track record of radical ingenuity and a never-say-die attitude.
-      He is a good team player (though he tends to insult them sometimes).
-      Mark can improvise creative solutions with nothing more than duct tape and water.
-      However, he tends to get left behind by his colleagues.
-    </p>
+      Baby is a professional hugger. Also specializes in nuzzling and sleeping, with
+      additional proficiencies in begging for food and hugs. Baby was recently adopted
+      after his true love passed away. After a significant mourning period, Baby has
+      accepted his new adopted family and is growing comfortable begging them for hugs.
+      When not hugging or resting from hugging, Baby enjoys chasing those really fat
+      squirrels that eat out of the bird feeders.
+      </p>
 
     <h3>Experience</h3>
 
-    <h4>NASA Engineer, 2031 - Present</h4>
-    <p>Mars mission specialist.</p>
-    <p>Botanist researcher and extraterrestrial farmer.</p>
+    <h4>Professional Hugger 2010 - Present</h4>
+    <p>Specializes in receiving tummy rubs.</p>
+    <p>Also excels at getting comfy on your lap.</p>
 
-    <h4>Botanist, 2028-2031</h4>
-    <p>Potato photosynthesis specialist.</p>
+    <h4>Squirrel Chaser, 2012 - Present</h4>
+    <p>How do they even eat out of the bird feeder? Or do they just hang on it? Either way, Baby will chase them off.</p>
 
     <h3>Skills</h3>
     <ul>
-      <li>Astronaut</li>
-      <li>Growing plants</li>
-      <li>Fixing computers</li>
-      <li>Driving Mars rovers</li>
+      <li>Cuddling</li>
+      <li>Nuzzling</li>
+      <li>Receiving Pets</li>
+      <li>Embracing</li>
     </ul>
 
     <h3>Education</h3>
     <ul>
-      <li>PhD in Mechanical Engineering, <em>Northwestern University, 2028</em></li>
-      <li>Masters of Science in Botany, <em>Northwestern University, 2029</em></li>
+      <li>PhD in Hug Sciences, <em>Northwestern University, 2010</em></li>
+      <li>Masters of Science in Squirrel Fear, <em>Northwestern University, 2012</em></li>
     </ul>
 
 
