--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
   <body>
     <div class="header">
-      <img src="Baby on sofa.jpg">
+      <img width="40%" src="Baby on sofa.jpg">
       <h1>Baby</h1>
       <h2>a/k/a Buddy, Lil Dude, Bubbsie</h2>
-      <p>Contact My Frandz:</p>
+      <p>Contact My Friendz:</p>
       <ul>
         <li><a href="https://twitter.com/marniethedog">Marnie aka Marn-Marn</a></li>
         <li><a href="https://twitter.com/itsdougthepug">Doug Da Pug</a></li>
@@ -22,7 +22,7 @@
     <p>
       Baby is a professional hugger. Also specializes in nuzzling and sleeping, with
       additional proficiencies in begging for food and hugs. Baby was recently adopted
-      after his true love passed away. After a significant mourning period, Baby has
+      after his true love passed away. Baby has
       accepted his new adopted family and is growing comfortable begging them for hugs.
       When not hugging or resting from hugging, Baby enjoys chasing those really fat
       squirrels that eat out of the bird feeders.
