New tab for links

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <h2>a/k/a Buddy, Lil Dude, Bubbsie</h2>
       <p>Contact My Friendz:</p>
       <ul>
-        <li><a href="https://twitter.com/marniethedog">Marnie aka Marn-Marn</a></li>
-        <li><a href="https://twitter.com/itsdougthepug">Doug Da Pug</a></li>
+        <li><a href="https://twitter.com/marniethedog" target="_blank">Marnie aka Marn-Marn</a></li>
+        <li><a href="https://twitter.com/itsdougthepug" target="_blank">Doug Da Pug</a></li>
       </ul>
     </div>
 
