--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
   <body>
     <div class="header">
-      <img width="40%" src="Baby on sofa.jpg">
+      <img width="400" src="Baby on sofa.jpg">
       <h1>Baby</h1>
       <h2>a/k/a Buddy, Lil Dude, Bubbsie</h2>
-      <p>Contact My Friendz:</p>
-      <ul>
-        <li><a href="https://twitter.com/marniethedog" target="_blank">Marnie aka Marn-Marn</a></li>
-        <li><a href="https://twitter.com/itsdougthepug" target="_blank">Doug Da Pug</a></li>
-      </ul>
     </div>
+    <h3>Contact My Friendz:</h3>
+    <ul>
+      <li><a href="https://twitter.com/marniethedog" target="_blank">Marnie aka Marn-Marn</a></li>
+      <li><a href="https://twitter.com/itsdougthepug" target="_blank">Doug Da Pug</a></li>
+    </ul>
 
     <h3>Summary</h3>
     <p>
